3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Backported fix for bug #2017790 "Cannot build talking books, listening books or
signs".  In order to miminize the code changes in the branch, only a minimal
fix was merged from trunk, without including the other improvements to the
code.
 include/sproto.h
 server/build_map.c
Raphael Quinet 2008-07-19

Merged fix for bug #2009686 from trunk (party password does not work if 8
characters long)
 server/login.c
Arvid Norlander 2008-07-18

Merged fix for bug #2009802 from trunk (alchemy experience not stored
correctly).
 common/recipe.c
Raphael Quinet 2008-07-03

Backport fix for bug #1965528 from trunk. Not sure if it fixes all cases of the bug.
 server/shop.c
Arvid Norlander 2008-05-21

Implement feature request #1961031: 'drop food' and 'drop flesh' buttons would be nice.
 lib/help/dropall: update help text.
 server/c_object.c: extend 'dropall' to accept 'food' and 'flesh'.
Nicolas Weeger 2008-05-10

Potential fix for bug #1928570: x-ray vision now needs a push start.
 server/spell_effect.c: use FLAG_NO_FIX_PLAYER to not mess with our values.
Nicolas Weeger 2008-05-08

Fix a potential underflow, forbid players to create too powerful missiles.
 server/spell_effect.c
Nicolas Weeger 2008-05-08

Remove unpaid items when returning a player to his savebed for map reset or
after server-specific timeout.
 include/sproto.h
 server/login.c player.c
Nicolas Weeger 2008-05-08

Better and more logical fix for bug #1936178: Trying to remove removed object causes server crash.
 random_maps/treasure.c: remove doors after door replacing.
Nicolas Weeger 2008-05-08

Fix artifact reading to (kind of) trim strings. Fix add missing artifacts